--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=chessDojo
+# MongoDB config
+spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/chessdojo?authSource=admin
+spring.data.mongodb.database=chessdojo
+
+
+# (optional) Disable Spring Security's login form
+spring.security.user.name=user
+spring.security.user.password=user
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
